# communication-tasks

./: .gitignore  .pre-commit-config.yaml  README.md  communication_matrices.py  monotones.py  pyproject.toml  requirements.txt  tests.py  utils.py
.github/workflows/: python-app.yml
communication_tasks/: communication_matrices.py  monotones.py
tests/: test_suite.py
utils/: utils.py
